20061003
 - (tim) [configure.ac] Move CHECK_HEADERS test before platform specific
   section so additional platform specific CHECK_HEADER tests will work
   correctly. Fixes "<net/if_tap.h> on FreeBSD" problem report by des AT des.no
   Feedback and "seems like a good idea" dtucker@

20061001
 - (dtucker) [audit-bsm.c] Include errno.h.  Pointed out by des at des.no.

20060929
 - (dtucker) [configure.ac] Bug #1239: Fix configure test for OpenSSH engine
   support.  Patch from andrew.benham at thus net.

20060928
 - (dtucker) [entropy.c] Bug #1238: include signal.h to fix compilation error
   on Solaris 8 w/out /dev/random or prngd.  Patch from rl at
   math.technion.ac.il.

20060926
 - (dtucker) [bufaux.h] nuke bufaux.h; it's already gone from OpenBSD and not
   referenced any more.  ok djm@
 - (dtucker) [sftp-server.8] Resync; spotted by djm@
 - (dtucker) Release 4.4p1.

20060924
 - (tim) [configure.ac] Remove CFLAGS hack for UnixWare 1.x/2.x (added
   to rev 1.308) to work around broken gcc 2.x header file.

20060923
 - (dtucker) [configure.ac] Bug #1234: Put opensc libs into $LIBS rather than
   $LDFLAGS.  Patch from vapier at gentoo org.

20060922
 - (dtucker) [packet.c canohost.c] Include arpa/inet.h for htonl macros on
   some platforms (eg HP-UX 11.00).  From santhi.amirta at gmail com.

20060921
 - (dtucker) OpenBSD CVS Sync
   - otto@cvs.openbsd.org 2006/09/19 05:52:23
     [sftp.c]
     Use S_IS* macros insted of masking with S_IF* flags. The latter may
     have multiple bits set, which lead to surprising results. Spotted by
     Paul Stoeber, more to come. ok millert@ pedro@ jaredy@ djm@
   - markus@cvs.openbsd.org 2006/09/19 21:14:08
     [packet.c]
     client NULL deref on protocol error; Tavis Ormandy, Google Security Team
 - (dtucker) [defines.h] Include unistd.h before defining getpgrp; fixes
   build error on Ultrix.  From Bernhard Simon.

20060918
 - (dtucker) [configure.ac] On AIX, check to see if the compiler will allow